- Bei der Auflistung der Benutzer wird der Link 'zum Adressbuch hinzufügen'
  nur dann angezeigt, sofern der jeweilige Benutzer nicht bereits im Adressbuch
  enthalten ist.

News Manager
- Die ID der Newsmeldungen wird bei der Übersicht im Backend aufgelistet.
- Die Platzhalter [[NEWS_TEASER_TEXT]] und [[NEWS_CATEGORY_NAME]] werden beim
  Platzhalterverzeichnis im Backend aufgelistet.

Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.

Modul: Shop
- Bilder können von einem Produkt wieder entfernt werden.

****************************************
* Behobene Fehler **********************
****************************************
Allgemein:
- Die im Benutzerprofil definierte bevorzugte Frontend-Sprache wird nach der
  Authentifizierung im Frontend nur dann geladen, sofern der Benutzer im
  Vorfeld nicht bereits die Frontend Sprache manuell ausgewählt hat.
- Geschwindigkeitsoptimierung der Benutzerverwaltung.
- Die Verwendung des Apache Moduls mod_rewrite wird nur aktiviert, sofern die
  Option 'Virtuelle Sprachverzeichnisse verwenden' aktiviert wurde.
- Erweiterte Berechtigungen beim News Manager und den Modulen Kalender,
  Inserate Mark und Verzeichnis.
- Das Versenden von E-Mails bei der Verwendung eines separaten SMTP-Servers
  funktioniert.

Block System
- Das Interface zur Auswahl der Frontend Seiten funktioniert korrekt.

Benutzerverwaltung
- Geburtstage zwischen dem 10. Februar 1653 und dem 16. November 5138 können
  erfasst werden.
- Beim Export werden Benutzer, welche als Frontend Sprache die Standard
  Sprache ausgewählt haben beim entsprechenden Export auch mit exportiert.

News Manager
- Das Bearbeiten einer Nachricht ohne Administrator Rechte funktioniert.
- Der Besitzer einer Newsmeldung kann immer auf diese Zugreifen, auch wenn
  diese geschützt ist und er sich kein expliziter Zugriff erteilt hat.
