@@ -82,10 +82,14 @@
 			<td>{TXT_NEWS_IMAGE_DESCRIPTION}</td>
 		</tr>
 		<tr class="row1">
+			<td>[[NEWS_IMAGE_LINK]]</td>
+			<td>{TXT_NEWS_IMAGE_LINK_DESCRIPTION}</td>
+		</tr>
+		<tr class="row2">
 			<td>[[NEWS_CSS]]</td>
 			<td>{TXT_NEWS_CSS_DESCRIPTION}</td>
 		</tr>
-		<tr class="row2">
+		<tr class="row1">
 			<td>&lt;!-- newsrow --&gt;</td>
 			<td>{TXT_NEWSROW_DESCRIPTION}</td>
 		</tr>
